objects/Scenario_IO_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>IdIO__c</fullName>
        <label>Dispositivo IO</label>
        <referenceTo>IO__c</referenceTo>
        <relationshipLabel>Configuraciones Escenario/IO</relationshipLabel>
        <relationshipName>Scenario_IO_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IdScenario__c</fullName>
        <label>Escenario</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Configuraciones Escenario/IO</relationshipLabel>
        <relationshipName>Scenario_IO_Configurations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Resultado</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tooltip_Message__c</fullName>
        <label>Mensaje</label>
        <type>TextArea</type>
    </fields>
    <label>Configuración Escenario/IO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IdIO__c</columns>
        <columns>IdScenario__c</columns>
        <columns>Result__c</columns>
        <columns>Tooltip_Message__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CFG-{0000}</displayFormat>
        <label>Scenario IO Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuraciones Escenario/IO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>